--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-  "dev": "nodemon --watch src --ext ts,js --exec \"node --loader ts-node/esm src/app.ts\"",
+    "dev": "nodemon --watch src --ext ts,js --exec \"node --loader ts-node/esm src/app.ts\"",
     "build": "tsc",
     "start": "node dist/app.js",
-  "start:dev": "node --loader ts-node/esm src/app.ts",
+    "start:dev": "node --loader ts-node/esm src/app.ts",
     "start:prod": "NODE_ENV=production node dist/app.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -47,6 +47,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "csv-writer": "^1.6.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
